@@ -14,6 +14,10 @@ below.</p>
 
 <dl>
 
+<dt><tt>$AUTH_ADD_RECEIVED</tt></dt> <dd>Do not add a <tt>Received</tt>
+header if this is set to <tt>0</tt> and the connection has been
+authenticated.</dd>
+
 <dt><tt>$FIXUP_RECEIVED_HOST</tt></dt> <dd>Received host to match</dd>
 
 <dt><tt>$FIXUP_RECEIVED_IP</tt></dt> <dd>Received IP to match</dd>
